--- a/posts/templates/posts/post_detail.html
+++ b/posts/templates/posts/post_detail.html
@@ -22,7 +22,7 @@
                             <div class="d-flex align-items-center flex-wrap">
                                 <div class="date"><i class="icon-clock"></i> {{ object.created|timesince }}</div>
                                 <div class="views"><i class="icon-eye"></i> 500</div>
-                                <div class="comments meta-last"><i class="icon-comment"></i>12</div>
+                                <div class="comments meta-last"><i class="icon-comment"></i>{{ post.comment_set.count}}</div>
                             </div>
                         </div>
                         <div class="post-body">
@@ -48,66 +48,43 @@
                             </a></div>
                         <div class="post-comments">
                             <header>
-                                <h3 class="h6">Post Comments<span class="no-of-comments">(3)</span></h3>
+                                <h3 class="h6">Post Comments<span
+                                        class="no-of-comments"> ({{ post.comment_set.count}})</span></h3>
                             </header>
+
+                            {% for comment in object.comment_set.all %}
                             <div class="comment">
                                 <div class="comment-header d-flex justify-content-between">
                                     <div class="user d-flex align-items-center">
                                         <div class="image"><img src="img/user.svg" alt="..."
                                                 class="img-fluid rounded-circle"></div>
-                                        <div class="title"><strong>Jabi Hernandiz</strong><span class="date">May
-                                                2016</span></div>
+                                        <div class="title"><strong>{{ comment.name }}</strong><span class="date">{{ comment.created|date:"M d"}} </span></div>
                                     </div>
                                 </div>
                                 <div class="comment-body">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
+                                    <p>
+                                        {{ comment.text}}
                                     </p>
                                 </div>
                             </div>
-                            <div class="comment">
-                                <div class="comment-header d-flex justify-content-between">
-                                    <div class="user d-flex align-items-center">
-                                        <div class="image"><img src="img/user.svg" alt="..."
-                                                class="img-fluid rounded-circle"></div>
-                                        <div class="title"><strong>Nikolas</strong><span class="date">May
-                                                2016</span></div>
-                                    </div>
-                                </div>
-                                <div class="comment-body">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="comment">
-                                <div class="comment-header d-flex justify-content-between">
-                                    <div class="user d-flex align-items-center">
-                                        <div class="image"><img src="img/user.svg" alt="..."
-                                                class="img-fluid rounded-circle"></div>
-                                        <div class="title"><strong>John Doe</strong><span class="date">May
-                                                2016</span></div>
-                                    </div>
-                                </div>
-                                <div class="comment-body">
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                                        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
-                                    </p>
-                                </div>
-                            </div>
+                            {% endfor %}
                         </div>
                         <div class="add-comment">
                             <header>
                                 <h3 class="h6">Leave a reply</h3>
                             </header>
-                            <form action="#" class="commenting-form">
+                            <form action="{% url 'posts:add-comment' slug=object.slug %}" class="commenting-form"
+                                method="POST">
+
+                                {% csrf_token %}
+
                                 <div class="row">
                                     <div class="form-group col-md-6">
                                         <input type="text" name="username" id="username" placeholder="Name"
                                             class="form-control">
                                     </div>
                                     <div class="form-group col-md-6">
-                                        <input type="email" name="username" id="useremail"
+                                        <input type="email" name="useremail" id="useremail"
                                             placeholder="Email Address (will not be published)" class="form-control">
                                     </div>
                                     <div class="form-group col-md-12">
