--- a/posts/templates/posts/post_index.html
+++ b/posts/templates/posts/post_index.html
@@ -66,7 +66,7 @@
                                 <div class="title"><span> {{ object.user.name }} </span></div>
                             </a>
                             <div class="date"><i class="icon-clock"></i> {{ object.created | timesince }} ago </div>
-                            <div class="comments"><i class="icon-comment"></i>12</div>
+                            <div class="comments"><i class="icon-comment"></i>{{ object.comment_set.count }}</div>
                         </footer>
                     </div>
                 </div>
