--- a/posts/templates/posts/post_list.html
+++ b/posts/templates/posts/post_list.html
@@ -9,6 +9,16 @@
             <div class="container">
                 <div class="row">
                     <!-- post -->
+
+
+                    {% if request.GET and not object_list %}
+                        
+                        
+                    <div class="mx-auto display-3">
+                        Not found
+                    </div>
+
+                    {% endif %}
                     {% for object in object_list %}
                     <div class="post col-xl-6">
                         <div class="post-thumbnail"><a href="post.html"><img style="max-height: 200px;" height="30px"
@@ -30,7 +40,7 @@
                                     <div class="title"><span>{{ object.user }}</span></div>
                                 </a>
                                 <div class="date"><i class="icon-clock"></i> 2 months ago</div>
-                                <div class="comments meta-last"><i class="icon-comment"></i>12</div>
+                                <div class="comments meta-last"><i class="icon-comment"></i>{{ object.comment_set.count}}</div>
                             </div>
                         </div>
                     </div>
