--- a/posts/templates/posts/snippets/latest_post.html
+++ b/posts/templates/posts/snippets/latest_post.html
@@ -12,7 +12,7 @@
                 <div class="title"><strong>{{post.title}}</strong>
                     <div class="d-flex align-items-center">
                         <div class="views"><i class="icon-eye"></i> 500</div>
-                        <div class="comments"><i class="icon-comment"></i>12</div>
+                        <div class="comments"><i class="icon-comment"></i>{{ post.comment_set.count}}</div>
                     </div>
                 </div>
             </div>
